# $Id$

2008-08-18	Vladlen Y. Koshelev

	* main/OQL/: OQL select query parser (from trunk).
	
	* test/core/OqlTokenizerTest.class.php, OqlSelectTest.class.php:
	corresponding tests.
	
	* core/Exceptions/SyntaxErrorException.class.php: exception to be used
	in parsers and syntax analyzers.
	
2008-08-14	Konstantin V. Arkhipov

	* core/OSQL/InsertOrUpdateQuery.class.php: lazySet() now aware of
	broken Time::toString(), which is fixed in trunk by removal of
	toFullString() in favour of correct toString().

2008-08-12	Vladlen Y. Koshelev

	* core/Form/Filters/RussianTypograph.class.php: standalone tag content
	mistakenly typographized; spotted by Sergey M. Skachkov.

	* test/core/FiltersTest.class.php: corresponding test. 

2008-08-12	Denis M. Gabaidulin

	* main/DAOs/Workers/DalayedDropDaoWorker.class.php: new dao worker
	with delayed drop modified objects strategy.

2008-08-07	Ivan Y. Khvostishkov

	* meta/types/HttpUrlType.class.php: new internal type implemented.

2008-08-07	Konstantin V. Arkhipov

	* 1.0.6 released.

2008-08-05	Ivan Y. Khvostishkov

	* core/OSQL/OrderBy.class.php: nullsFirst(), nullsLast(),
	isNullsFirst(), setNullsFirst() - PosgreSQL 8.3-specific ordering
	feature support.

2008-08-04	Ivan Y. Khvostishkov

	* main/Criteria/Projections/ClassProjection.class.php: proper table
	attached.

	* core/OSQL/SQLRightJoin.class.php: added.

	* core/OSQL/Joiner.class.php: getFirstTable() helper.

	* core/OSQL/TimeIntervalsGenerator.class.php: rewritten in OSQL, but
	still works in PostgreSQL only.

	* core/OSQL/DataType.class.php: added interval.

	* main/DAOs/GenericDAO.class.php: getTotalCount() implemented, with
	correspondent tests.

2008-08-03	Konstantin V. Arkhipov

	* main/DAOs/Workers/CacheDaoWorker.class.php: useless classKey usage
	removed.

	* core/Exceptions/CachedObjectNotFoundException.class.php: new
	exception introduced to avoid useless Cache::NOT_FOUND marking in
	TransparentDaoWorker's childs.

2008-07-21	Ivan Y. Khvostishkov
