@@ -12,6 +12,7 @@ Dmitry A. Lomash		<Dmitry.Lomash@noussoft.com>
 Dmitry E. Demidov		<Dmitry.Demidov@noussoft.com>
 Dmitry V. Sokolov		<demon.mhm@gmail.com>
 Evgeniy N. Sokolov		<ewgraf@gmail.com>
+Evgeny V. Kokovikhin	<dovg@dovg.ru>
 Garmonbozia Research Group	<garmonbozia@shadanakar.org>
 Igor V. Gulyaev			<igor_vg@mail.ru>
 Ivan Y. Khvostishkov		<dedmajor@gmail.com>
