@@ -1,5 +1,10 @@
 # $Id$
 
+2008-08-19	Ivan Y. Khvostishkov
+
+	* main/Net/Http/Cookie.class.php, CookieCollection.class.php: thanx to
+	Evgeny V. Kokovikhin <dovg@dovg.ru>.
+
 2008-08-18	Vladlen Y. Koshelev
 
 	* main/OQL/: OQL select query parser (from trunk).
